crates/swc_ecma_parser/tests/test262-error-references/fail/b03ee881dce1a367.js.stderr
error: Not a pattern
 --> $DIR/tests/test262-parser/fail/b03ee881dce1a367.js:1:3
  |
1 | ([a.a]) => 42
  |   ^^^

